# Agentic-AI-Project

./: .gitignore  README.md  pyproject.toml
shopping_agent/: app.py  shopping_agent.py  store.db
telecom_chatbot/: app.py  ingest_faq.py  ingest_pdf.py  ingest_tickets.py  rag_chain.py  retriever.py
telecom_chatbot/chroma_store/: chroma.sqlite3
