[project]
name = "agentic-ai-crash-course"
version = "0.1.0"
description = "Agentic AI crash course by Codebasics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
    "ipykernel>=6.29.0",
    "notebook>=7.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pandas>=2.2.0",
    "fpdf2>=2.7.0",
    "pypdf>=4.0.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "pillow>=10.0.0",
    "torchvision>=0.19.0",
]
